Grid is Drawn on top of the Selection Outline #44516

Closed
opened 2015-04-26 12:25:44 +02:00 by Dumitru-Alin · 12 comments

System Information
Windows 8.1
NVidia GT640: Driver version: 350.12

Blender Version
Broken: 2.74|000dfc0
Worked: 2.73

Short description of error
Grid is being drawn on top of the Selection Outline. Looks worse when having width of outline set to about 2-3 pixels and Antialiasing set to x4 or x8, on a smooth object like Suzanne with SubDivs applied and Smooth Shading ON

Exact steps for others to reproduce the error
I deleted Blender Foundation folder from User/AppData/Roaming. Started Blender, Set the Outline to 5 (to see the error easier). Created Monkey. Smoothed it to subDiv 4, shading to Smooth. Selected it. BAM :) Drawing error is there

**System Information** Windows 8.1 NVidia GT640: Driver version: 350.12 **Blender Version** Broken: 2.74|000dfc0 Worked: 2.73 **Short description of error** Grid is being drawn on top of the Selection Outline. Looks worse when having width of outline set to about 2-3 pixels and Antialiasing set to x4 or x8, on a smooth object like Suzanne with SubDivs applied and Smooth Shading ON **Exact steps for others to reproduce the error** I deleted Blender Foundation folder from User/AppData/Roaming. Started Blender, Set the Outline to 5 (to see the error easier). Created Monkey. Smoothed it to subDiv 4, shading to Smooth. Selected it. BAM :) Drawing error is there
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @HunterD

Added subscriber: @HunterD
Antonis Ryakiotakis was assigned by Ton Roosendaal 2015-04-26 12:28:38 +02:00
Author

Error on 2.74: http://i.imgur.com/D2M6Gtn.png
No error on 2.73: http://i.imgur.com/8gPc4mi.png

To make clear the error reproduction steps: Deleted Blender Foundation folder, started Blender, set Outline Width to 5 pixels, Select an Object

Error on 2.74: http://i.imgur.com/D2M6Gtn.png No error on 2.73: http://i.imgur.com/8gPc4mi.png To make clear the error reproduction steps: Deleted Blender Foundation folder, started Blender, set Outline Width to 5 pixels, Select an Object

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue here (linux, GTX850m, nvidia drivers 340.65). Antony, is it known glitch from changes in draw code?

Can confirm the issue here (linux, GTX850m, nvidia drivers 340.65). Antony, is it known glitch from changes in draw code?

It's due to viewport compositing. The idea is that we draw the grid last without depth mask, not first, so that it won't get a halo from ambient occlusion effects.

I would close as working as expected unless others think it should be as it was before.

It's due to viewport compositing. The idea is that we draw the grid last without depth mask, not first, so that it won't get a halo from ambient occlusion effects. I would close as working as expected unless others think it should be as it was before.

Well… not crucial, but to me it’s not really nice to have that grid always in front of outline… Also inconsistent with behavior of grid with solid object itself (where zbuffer must be active somehow?). Pure 'user feeling', I do not know enough code behind it to judge. ;)

Well… not crucial, but to me it’s not really nice to have that grid always in front of outline… Also inconsistent with behavior of grid with solid object itself (where zbuffer must be active somehow?). Pure 'user feeling', I do not know enough code behind it to judge. ;)

I will just make it drawn after only if we use ambient occlusion...will still have the issue when using compositing but then at least we can close those reports with a nice "shooo and wait for new viewport" reply.

I will just make it drawn after only if we use ambient occlusion...will still have the issue when using compositing but then at least we can close those reports with a nice "shooo and wait for new viewport" reply.

This issue was referenced by f8c383472a

This issue was referenced by f8c383472a68ae1fdfc5b98c63fb1cd27c49e690

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f8c383472a.

Closed by commit f8c383472a.

This issue was referenced by dbebf5879035b1cbe3f6f16c3a0c6e4a06e4908e

This issue was referenced by dbebf5879035b1cbe3f6f16c3a0c6e4a06e4908e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44516
No description provided.